exports[`AreaChart.js should take stubbed data and do basic rendering 1`] = `
<g
  className="area-chart"
  clipPath={undefined}
  transform="translate(0,0)" />
`;

exports[`AreaChart.js should take stubbed data repositions based on padding 1`] = `
<g
  className="area-chart"
  clipPath={undefined}
  transform="translate(10,10)" />
`;

exports[`AreaChart.js should take the clip path prop 1`] = `
<g
  className="area-chart"
  clipPath="my-clip-path"
  transform="translate(10,10)" />
`;
